==> davideferrario/TommRo/libs/02_tommRoCHw/template/bus/env/esp32/tommRoCHwTemplateBusEnvironmentI2CMaster.c <==
#include "bus/env/tommRoCHwTemplateBusEnvironmentI2CMaster.h"
#include "TOMMROC.h"
#include "env/tommRoCTemplateEnv.h"
#include "bus/common/i2c/master/tommRoCHwTemplateBusCommonI2CMasterCb.h"
#include "bus/env/esp32/i2c/tommRoCHwTemplateBusI2CESP32Hal.h"
#include "soc/gpio_num.h"
#include "driver/gpio.h"
#include "driver/i2c.h"
#include "freertos/FreeRTOS.h"
#define __DEFAULT_BAUDRATE__            (100000)
#define __DEFAULT_SDA_IO_NUM__          (GPIO_NUM_NC)
#define __DEFAULT_SCL_IO_NUM__          (GPIO_NUM_NC)
#define __DEFAULT_MCU_PULL_UP_STATUS__  (TOMMRO_C_UTIL_DISABLED)
#define __EMPTY___tommRoC_hw_i2c_master_config_t____        \
{                                                           \
    /* .baudRate */         __DEFAULT_BAUDRATE__,           \
    /* .sdaGPIONum */       __DEFAULT_SDA_IO_NUM__,         \
    /* .sclGPIONum */       __DEFAULT_SCL_IO_NUM__,         \
    /* .mcuPullUpStatus */  __DEFAULT_MCU_PULL_UP_STATUS__, \
}
#define __EMPTY___tommRoC_hw_i2c_master_handle_t____    \
{                                                       \
    /* .i2cPort */      I2C_NUM_MAX,                    \
}

static tommRoC_hw_err_enum_t _phy_write_buffers(
                void*                       const   i2cConfigPtr,
                void*                       const   i2cHandlePtr,
        const   uint8_t                             slaveAddress7Bit,
        const   tommRoC_hw_bus_write_buf_t* const   writeBuffersPtr,
        const   uint8_t                             writeBuffersAmount,
        const   uint32_t                            timeoutPerByteMsec) {

    tommRoC_hw_err_enum_t res;

    TOMMROC_UTIL_UNUSED_PARAM(i2cConfigPtr);

    i2c_cmd_handle_t cmd = i2c_cmd_link_create();

    if (NULL == cmd) {
        return TOMMRO_C_HW_LOW_LEVEL_ERR;
    }

    res = _write_buffers(
            cmd,
            i2cHandlePtr,
            slaveAddress7Bit,
            writeBuffersPtr,
            writeBuffersAmount,
            timeoutPerByteMsec);

    i2c_cmd_link_delete(cmd);

    return res;
}

static tommRoC_hw_err_enum_t _phy_read_buffers(
                void*                       const   i2cConfigPtr,
                void*                       const   i2cHandlePtr,
        const   uint8_t                             slaveAddress7Bit,
                tommRoC_hw_bus_read_buf_t*  const   readBuffersPtr,
        const   uint8_t                             readBuffersAmount,
        const   uint32_t                            timeoutPerByteMsec) {

    tommRoC_hw_err_enum_t res;

    TOMMROC_UTIL_UNUSED_PARAM(i2cConfigPtr);

    i2c_cmd_handle_t cmd = i2c_cmd_link_create();

    if (NULL == cmd) {
        return TOMMRO_C_HW_LOW_LEVEL_ERR;
    }

    res = _read_buffers(
            cmd,
            i2cHandlePtr,
            slaveAddress7Bit,
            readBuffersPtr,
            readBuffersAmount,
            timeoutPerByteMsec);

    i2c_cmd_link_delete(cmd);

    return res;
}

static tommRoC_hw_err_enum_t _phy_write_read_buffer(
                void*                       const   i2cConfigPtr,
                void*                       const   i2cHandlePtr,
        const   uint8_t                             slaveAddress7Bit,
        const   uint8_t*                    const   writeBufferPtr,
        const   uint16_t                            writeBufferLen,
                uint8_t*                    const   readBufferPtr,
        const   uint16_t                            toReadAmount,
        const   uint32_t                            delayWriteToReadMsec,
        const   uint32_t                            timeoutPerByteMsec) {

    tommRoC_hw_err_enum_t res;

    TOMMROC_UTIL_UNUSED_PARAM(i2cConfigPtr);

    i2c_cmd_handle_t cmd = i2c_cmd_link_create();

    if (NULL == cmd) {
        return TOMMRO_C_HW_LOW_LEVEL_ERR;
    }

    res = _write_read_buffer(
            cmd,
            i2cHandlePtr,
            slaveAddress7Bit,
            writeBufferPtr,
            writeBufferLen,
            readBufferPtr,
            toReadAmount,
            delayWriteToReadMsec,
            timeoutPerByteMsec);

    i2c_cmd_link_delete(cmd);

    return res;
}

static tommRoC_hw_err_enum_t _set_sda_pin(
        const   tommRoC_hw_template_bus_i2c_master_enum_t           bus,
        const   gpio_num_t*                                 const   propValuePtr) {

    switch (bus) {

#if defined (__TOMMROC_HW_USE_I2C_MASTER_0_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_I2C_MASTER_0:
        _i2c_master_config_0.sdaGPIONum = *propValuePtr;
        return TOMMRO_C_HW_ERR_SUCCESS;
#endif

#if defined (__TOMMROC_HW_USE_I2C_MASTER_1_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_I2C_MASTER_1:
        _i2c_master_config_1.sdaGPIONum = *propValuePtr;
        return TOMMRO_C_HW_ERR_SUCCESS;
#endif

    default:
        break;

    }

    return TOMMRO_C_HW_NOT_AVAILABLE_ERR;
}

static tommRoC_hw_err_enum_t _set_scl_pin(
        const   tommRoC_hw_template_bus_i2c_master_enum_t           bus,
        const   gpio_num_t*                                 const   propValuePtr) {

    switch (bus) {

#if defined (__TOMMROC_HW_USE_I2C_MASTER_0_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_I2C_MASTER_0:
        _i2c_master_config_0.sclGPIONum = *propValuePtr;
        return TOMMRO_C_HW_ERR_SUCCESS;
#endif

#if defined (__TOMMROC_HW_USE_I2C_MASTER_1_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_I2C_MASTER_1:
        _i2c_master_config_1.sclGPIONum = *propValuePtr;
        return TOMMRO_C_HW_ERR_SUCCESS;
#endif

    default:
        break;

    }

    return TOMMRO_C_HW_NOT_AVAILABLE_ERR;
}

tommRoC_hw_err_enum_t tommRoCHwTemplateBusEnvironmentI2CMaster0Start(
                tommRoC_hw_bus_cb_funct_t*  const   cbFunctPtr) {

    tommRoC_hw_template_bus_i2c_esp32_hal_config_t halConfig;

    halConfig.i2cPort                       = I2C_NUM_0;
    halConfig.i2cConfig.master.clk_speed    = _i2c_master_config_0.baudRate;
    halConfig.i2cConfig.mode                = I2C_MODE_MASTER;
    halConfig.i2cConfig.sda_io_num          = _i2c_master_config_0.sdaGPIONum;
    halConfig.i2cConfig.sda_pullup_en       = (TOMMRO_C_UTIL_DISABLED == _i2c_master_config_0.mcuPullUpStatus) ? (GPIO_PULLUP_DISABLE) : (GPIO_PULLUP_ENABLE);
    halConfig.i2cConfig.scl_io_num          = _i2c_master_config_0.sclGPIONum;
    halConfig.i2cConfig.scl_pullup_en       = (TOMMRO_C_UTIL_DISABLED == _i2c_master_config_0.mcuPullUpStatus) ? (GPIO_PULLUP_DISABLE) : (GPIO_PULLUP_ENABLE);
    halConfig.i2cConfig.clk_flags           = I2C_SCLK_SRC_FLAG_FOR_NOMAL;

    TOMMROC_HW_ASSERT_TOMMROC_HW_LIB_FUNCT_SUCCESS(tommRoCHwTemplateBusI2CESP32HalMasterInit(&halConfig));

    _i2c_master_I2C0_get_callback_ESP32(cbFunctPtr);

    _i2c_master_handle_0.i2cPort = halConfig.i2cPort;

    return TOMMRO_C_HW_ERR_SUCCESS;
}

tommRoC_hw_err_enum_t tommRoCHwTemplateBusEnvironmentI2CMaster1Start(
                tommRoC_hw_bus_cb_funct_t*  const   cbFunctPtr) {

    tommRoC_hw_template_bus_i2c_esp32_hal_config_t halConfig;

    halConfig.i2cPort                       = I2C_NUM_1;
    halConfig.i2cConfig.master.clk_speed    = _i2c_master_config_1.baudRate;
    halConfig.i2cConfig.mode                = I2C_MODE_MASTER;
    halConfig.i2cConfig.sda_io_num          = _i2c_master_config_1.sdaGPIONum;
    halConfig.i2cConfig.sda_pullup_en       = (TOMMRO_C_UTIL_DISABLED == _i2c_master_config_1.mcuPullUpStatus) ? (GPIO_PULLUP_DISABLE) : (GPIO_PULLUP_ENABLE);
    halConfig.i2cConfig.scl_io_num          = _i2c_master_config_1.sclGPIONum;
    halConfig.i2cConfig.scl_pullup_en       = (TOMMRO_C_UTIL_DISABLED == _i2c_master_config_1.mcuPullUpStatus) ? (GPIO_PULLUP_DISABLE) : (GPIO_PULLUP_ENABLE);
    halConfig.i2cConfig.clk_flags           = I2C_SCLK_SRC_FLAG_FOR_NOMAL;

    TOMMROC_HW_ASSERT_TOMMROC_HW_LIB_FUNCT_SUCCESS(tommRoCHwTemplateBusI2CESP32HalMasterInit(&halConfig));

    _i2c_master_I2C1_get_callback_ESP32(cbFunctPtr);

    _i2c_master_handle_1.i2cPort = halConfig.i2cPort;

    return TOMMRO_C_HW_ERR_SUCCESS;
}
