==> davideferrario/TommRo/libs/02_tommRoCHw/template/bus/env/arm/SiLabs/tommRoCHwTemplateBusEnvironmentI2CMaster.c <==
#include "bus/env/tommRoCHwTemplateBusEnvironmentI2CMaster.h"
#include "TOMMROC.h"
#include "env/tommRoCTemplateEnv.h"
#include "bus/common/i2c/master/tommRoCHwTemplateBusCommonI2CMasterCb.h"
#include "bus/env/arm/SiLabs/i2c/tommRoCHwTemplateBusI2CSiLabsHal.h"
#include "bus/env/arm/SiLabs/i2c/tommRoCHwTemplateBusI2CSiLabsLocation.h"
#include "TOMMROCMwTemplate.h"
#define __DEFAULT_BAUDRATE__            (100000)
#define __DEFAULT_MCU_PULL_UP_STATUS__  (TOMMRO_C_UTIL_DISABLED)
#define __EMPTY___tommRoC_hw_i2c_master_config_t____                                    \
{                                                                                       \
    /* .baudRate */         __DEFAULT_BAUDRATE__,                                       \
    /* .siLabsLocation */   __EMPTY_tommRoC_hw_template_bus_i2c_silabs_location_t__,    \
    /* .mcuPullUpStatus */  __DEFAULT_MCU_PULL_UP_STATUS__,                             \
}
#define __EMPTY___tommRoC_hw_i2c_master_handle_t____    \
{                                                       \
    /* .i2cPtr */           NULL,                       \
    /* .i2cStatus */        i2cTransferSwFault,         \
}

static tommRoC_hw_err_enum_t _phy_write_buffers(
                void*                       const   i2cConfigPtr,
                void*                       const   i2cHandlePtr,
        const   uint8_t                             slaveAddress7Bit,
        const   tommRoC_hw_bus_write_buf_t* const   writeBuffersPtr,
        const   uint8_t                             writeBuffersAmount,
        const   uint32_t                            timeoutPerByteMsec) {
    
    const tommRoC_hw_bus_write_buf_t* writeBufferPtr;
    uint8_t toSendBuffAmount;
    uint8_t index;

    TOMMROC_UTIL_UNUSED_PARAM(i2cConfigPtr);

    for (index = 0, writeBufferPtr = writeBuffersPtr; index < writeBuffersAmount; index += toSendBuffAmount, writeBufferPtr += toSendBuffAmount) {

        toSendBuffAmount = tommRoCMathMin(2, writeBuffersAmount - index);

        if (toSendBuffAmount < 2) {

            TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(
                    _i2c_master_write_transfer(
                            i2cHandlePtr,
                            slaveAddress7Bit,
                            writeBufferPtr->bufferPtr,
                            writeBufferPtr->toWriteAmount,
                            timeoutPerByteMsec * tommRoCMathMax(1, writeBufferPtr->toWriteAmount)));
        }
        else {

            TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(
                    _i2c_master_write_write_transfer(
                            i2cHandlePtr,
                            slaveAddress7Bit,
                            writeBufferPtr->bufferPtr,
                            writeBufferPtr->toWriteAmount,
                            (writeBufferPtr + 1)->bufferPtr,
                            (writeBufferPtr + 1)->toWriteAmount,
                            timeoutPerByteMsec * tommRoCMathMax(1, writeBufferPtr->toWriteAmount + (writeBufferPtr + 1)->toWriteAmount)));
        }
    }

    return TOMMRO_C_HW_ERR_SUCCESS;
}

static tommRoC_hw_err_enum_t _phy_read_buffers(
                void*                       const   i2cConfigPtr,
                void*                       const   i2cHandlePtr,
        const   uint8_t                             slaveAddress7Bit,
                tommRoC_hw_bus_read_buf_t*  const   readBuffersPtr,
        const   uint8_t                             readBuffersAmount,
        const   uint32_t                            timeoutPerByteMsec) {

    tommRoC_hw_bus_read_buf_t* readBufferPtr;
    uint8_t index;

    TOMMROC_UTIL_UNUSED_PARAM(i2cConfigPtr);

    for (index = 0, readBufferPtr = readBuffersPtr; index < readBuffersAmount; ++index, ++readBufferPtr) {

        TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(
                _i2c_master_read_transfer(
                        i2cHandlePtr,
                        slaveAddress7Bit,
                        readBufferPtr->bufferPtr,
                        readBufferPtr->toReadAmount,
                        timeoutPerByteMsec * tommRoCMathMax(1, readBufferPtr->toReadAmount)));

        *(readBufferPtr->readedAmountPtr) = readBufferPtr->toReadAmount;
    }

    return TOMMRO_C_HW_ERR_SUCCESS;
}

static tommRoC_hw_err_enum_t _phy_write_read_buffer(
                void*                       const   i2cConfigPtr,
                void*                       const   i2cHandlePtr,
        const   uint8_t                             slaveAddress7Bit,
        const   uint8_t*                    const   writeBufferPtr,
        const   uint16_t                            writeBufferLen,
                uint8_t*                    const   readBufferPtr,
        const   uint16_t                            toReadAmount,
        const   uint32_t                            delayWriteToReadMsec,
        const   uint32_t                            timeoutPerByteMsec) {

    TOMMROC_UTIL_UNUSED_PARAM(i2cConfigPtr);
    TOMMROC_UTIL_UNUSED_PARAM(delayWriteToReadMsec);

    TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(
            _i2c_master_write_read_transfer(
                    i2cHandlePtr,
                    slaveAddress7Bit,
                    writeBufferPtr,
                    writeBufferLen,
                    readBufferPtr,
                    toReadAmount,
                    timeoutPerByteMsec * tommRoCMathMax(1, writeBufferLen + toReadAmount)));

    return TOMMRO_C_HW_ERR_SUCCESS;
}

static tommRoC_hw_err_enum_t _set_sda_pin(
        const   tommRoC_hw_template_bus_i2c_master_enum_t           bus,
        const   uint32_t*                                   const   propValuePtr) {

    switch (bus) {

#if defined (__TOMMROC_HW_USE_I2C_MASTER_0_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_I2C_MASTER_0:
        _i2c_master_config_0.siLabsLocation.gpioSDAPin = *propValuePtr;
        return TOMMRO_C_HW_ERR_SUCCESS;
#endif

#if defined (__TOMMROC_HW_USE_I2C_MASTER_1_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_I2C_MASTER_1:
        _i2c_master_config_1.siLabsLocation.gpioSDAPin = *propValuePtr;
        return TOMMRO_C_HW_ERR_SUCCESS;
#endif

    default:
        break;

    }

    return TOMMRO_C_HW_NOT_AVAILABLE_ERR;
}

static tommRoC_hw_err_enum_t _set_scl_pin(
        const   tommRoC_hw_template_bus_i2c_master_enum_t           bus,
        const   uint32_t*                                   const   propValuePtr) {

    switch (bus) {

#if defined (__TOMMROC_HW_USE_I2C_MASTER_0_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_I2C_MASTER_0:
        _i2c_master_config_0.siLabsLocation.gpioSCLPin = *propValuePtr;
        return TOMMRO_C_HW_ERR_SUCCESS;
#endif

#if defined (__TOMMROC_HW_USE_I2C_MASTER_1_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_I2C_MASTER_1:
        _i2c_master_config_1.siLabsLocation.gpioSCLPin = *propValuePtr;
        return TOMMRO_C_HW_ERR_SUCCESS;
#endif

    default:
        break;

    }

    return TOMMRO_C_HW_NOT_AVAILABLE_ERR;
}

tommRoC_hw_err_enum_t tommRoCHwTemplateBusEnvironmentI2CMaster0Start(
        tommRoC_hw_bus_cb_funct_t*  const   cbFunctPtr) {

    tommRoC_hw_template_bus_i2c_silabs_hal_config_t halConfig;

    halConfig.clock             = cmuClock_I2C0;
    halConfig.i2cPtr            = (void*) I2C0;
    halConfig.baudRate          = _i2c_master_config_0.baudRate;
    halConfig.IRQn              = I2C0_IRQn;
    halConfig.mcuPullUpStatus   = _i2c_master_config_0.mcuPullUpStatus;
    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCUtilMemCopy(&halConfig.location, &_i2c_master_config_0.siLabsLocation, sizeof(tommRoC_hw_template_bus_i2c_silabs_location_t)));

    TOMMROC_HW_ASSERT_TOMMROC_HW_LIB_FUNCT_SUCCESS(tommRoCHwTemplateBusI2CSiLabsHalMasterInit(&halConfig));

    _i2c_master_I2C0_get_callback_ARM(cbFunctPtr);

    _i2c_master_handle_0.i2cPtr = halConfig.i2cPtr;

    return TOMMRO_C_HW_ERR_SUCCESS;
}

tommRoC_hw_err_enum_t tommRoCHwTemplateBusEnvironmentI2CMaster1Start(
        tommRoC_hw_bus_cb_funct_t*  const   cbFunctPtr) {

    tommRoC_hw_template_bus_i2c_silabs_hal_config_t halConfig;

    halConfig.clock             = cmuClock_I2C1;
    halConfig.i2cPtr            = (void*) I2C1;
    halConfig.baudRate          = _i2c_master_config_1.baudRate;
    halConfig.IRQn              = I2C1_IRQn;
    halConfig.mcuPullUpStatus   = _i2c_master_config_1.mcuPullUpStatus;
    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCUtilMemCopy(&halConfig.location, &_i2c_master_config_1.siLabsLocation, sizeof(tommRoC_hw_template_bus_i2c_silabs_location_t)));

    TOMMROC_HW_ASSERT_TOMMROC_HW_LIB_FUNCT_SUCCESS(tommRoCHwTemplateBusI2CSiLabsHalMasterInit(&halConfig));

    _i2c_master_I2C1_get_callback_ARM(cbFunctPtr);

    _i2c_master_handle_1.i2cPtr = halConfig.i2cPtr;

    return TOMMRO_C_HW_ERR_SUCCESS;
}
